--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,14 @@ form {
 
 @layer animation {
 	body {
+		max-height: 100dvh;
 		background: linear-gradient(55deg, rgb(46, 0, 0) 45%, white 65%);
 		background-size: 500%;
 		background-position-x: left;
 		animation: slide 1.15s linear forwards;
 
 		> div {
+			transform-origin: top;
 			animation: zoomOut 1.65s ease-in-out forwards;
 		}
 	}
